# EMBER-Demo

./: .gitignore  .gitmodules  Dockerfile  LICENSE  docker-build.sh  docker-run.sh
.devcontainer/: devcontainer.json
ember_lab/adder-example/: CMakeLists.txt  adder.hpp  adder_wreg.hpp  adder_wreg.tpp  build.sh  main.cpp
ember_lab/adder-example/solution/: adder.tpp  adder_wreg.tpp  main.cpp
ember_lab/cpp/: CMakeLists.txt  build.sh  main.cpp
ember_lab/nvdla-example/: network_test.py  nvdla_int8.yaml  pynvdla_debug.py  pynvdla_test.py
ember_lab/nvdla-example/utils/: dataset.py  lenet.py  nvtorch.py  parser.py  wrapper.py
